<resources>
    <string name="app_name">走兔跑腿</string>

    <!--main_bottom-->
    <string name="index">首页</string>
    <string name="getorder">接单</string>
    <string name="orderCenter">订单中心</string>
    <string name="personCenter">个人中心</string>


    <!--main_bottom-->

    <!--main_index-->
    <string name="goto_paotui_manage">走兔同城跑腿员管理端</string>
    <string name="select_by_orderno">请输入订单编号查询</string>
    <string name="search">搜索</string>
    <string name="getmoney_for_paotui">跑腿费收款</string>
    <string name="the_nearly_get_fee">最近一笔收款</string>
    <string name="the_nearly_get_fee_demo">今天 11:45 12元</string>
    <string name="getby_zfb">支付宝收款</string>
    <string name="getby_wx">微信收款</string>
    <string name="getby_cash">现金收款</string>
    <string name="person_record_data">个人业绩数据</string>
    <string name="today_order_the_most">今日订单最高</string>
    <string name="today_percentage_the_most">提成最高</string>
    <string name="today_mile_the_most">里程最高</string>
    <string name="today_order_or_ticket">今日订单/票</string>
    <string name="yesterday_order">昨日订单</string>
    <string name="month_all_order">本月总订单</string>
    <string name="today_percentage">今日提成/元</string>
    <string name="yesterday_percentage">昨日提成</string>
    <string name="month_all_percentage">本月总提成</string>
    <string name="today_mile">今日里程/km</string>
    <string name="yesterday_mile">昨日里程</string>
    <string name="month_all_mile">本月总里程</string>
    <!--main_index-->


    <!--main getorder-->
    <string name="sendaddr">寄件地址:</string>
    <string name="getaddr">收件地址:</string>
    <string name="remark">清单/备注:</string>
    <string name="orderTimes">下单时间:</string>






    <!--main getorder-->

    <!--main_ordercenter-->

    <string name="ordertype">订单类型</string>
    <string name="data">日期</string>
    <string name="shenghuopaotui">生活跑腿</string>
    <string name="orderdata">下单日期:</string>
    <string name="get">取</string>
    <string name="send">送</string>
    <string name="destination">目的地 :</string>
    <string name="beginaddr">始发地 :</string>
    <string name="receiveman">收件人</string>
    <string name="ordernum">订单编号 :</string>
    <string name="paymoney">实付款 :</string>
    <string name="finish">完成</string>
    <string name="orderIsSending">订单正在派送中...</string>
    <string name="orderIsFinish">订单已完成</string>
    <!--main_ordercenter-->

    <!--main_ordercenter_orderdetail-->
    <string name="back">返回</string>
    <string name="ordertime">下单时间</string>
    <string name="orderreceivetime">送达时间</string>
    <string name="orderremark">订单备注:</string>
    <string name="ordersendtime">派送时间</string>
    <string name="ordersenddis">派送距离</string>
    <string name="orderdisplayinmap">在地图中\n显示路线</string>
    <string name="orderprice">订单金额</string>
    <!--main_ordercenter_orderdetail-->

    <!--main_personcenter 个人中心-->
    <string name="person_pecrcent">个人提成</string>
    <string name="submittobank">立即提取至银行卡  ></string>
    <string name="clocknow">立即打卡</string>
    <string name="caiwujiekuan">财务结款</string>
    <string name="note">记事本</string>
    <string name="workrecord">考勤记录</string>
    <string name="duteorder">排班表</string>
    <string name="lookforshop">查看门店</string>
    <string name="clicktoseedetail">点击查看详细</string>
    <string name="recordtheimportanteveryday">记录每天重要时刻</string>
    <string name="knowearilytodo">早知道早安排</string>
    <string name="lookforothershopmethodcontact">查找其他门店联系方式</string>
    <string name="loginout">退出</string>
    <string name="login">登录</string>
    <!--main_personcenter 个人中心-->







    <!--main personcenter login-->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="remembermylogindata">记住我的登录信息</string>
    <string name="register">注册账号</string>
    <string name="forgetlogindata">忘记登入信息了?</string>
    <!--main personcenter login-->

    <!--main personcenter login register-->
    <string name="registersubmit">注册</string>
    <string name="yanzhengma">验证码</string>
    <string name="getyanzhengma">获取验证码</string>
    <!--main personcenter login register-->



</resources>
