<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_main_common_bottom_height"
    android:background="@color/white"

    >

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingTop="4dp" >

        <RadioButton
            android:id="@+id/rb_main_common_bottom_index"
            style="@style/common_bottom"
            android:checked="true"
            android:drawableTop="@drawable/main_bottom_pic_index_center_selector"
            android:tag="main_common_bottom_index"
            android:text="@string/index"
            android:drawablePadding="1dp"
            android:paddingLeft="8dp"

            />

        <RadioButton
            android:id="@+id/rb_main_common_bottom_getorder"
            style="@style/common_bottom"
            android:drawablePadding="1dp"
            android:drawableTop="@drawable/main_bottom_pic_getorder_selector"
            android:tag="main_common_bottom_getorder"
            android:text="@string/getorder" />

        <RadioButton
            android:id="@+id/rb_main_common_bottom_ordercenter"
            style="@style/common_bottom"
            android:drawableTop="@drawable/main_bottom_pic_order_center_selector"
            android:tag="main_common_bottom_ordercenter"
            android:drawablePadding="1dp"
            android:text="@string/orderCenter" />

        <RadioButton
            android:id="@+id/rb_main_common_bottom_personconter"
            style="@style/common_bottom"
            android:drawablePadding="1dp"
            android:drawableTop="@drawable/main_bottom_pic_person_center_selector"
            android:tag="bottom_button4"
            android:text="@string/personCenter"
            android:paddingRight="8dp"

            />
    </RadioGroup>
</RelativeLayout>