<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <!--走图同城头部搜素-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_main_index_top_bg_height"
        android:background="@drawable/index_top_bg"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/goto_paotui_manage"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_main_index_top_selector_height"
                android:background="@drawable/fragment_index_selector_white_bg_half_round_radius"
                android:layout_marginLeft="@dimen/dimen_main_index_selector_margin_left_right"
                android:layout_marginRight="@dimen/dimen_main_index_selector_margin_left_right"
                android:layout_alignParentTop="true"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_main_index_top_selector_height"
                android:layout_marginLeft="@dimen/dimen_main_index_selector_margin_left_right"
                android:layout_marginRight="@dimen/dimen_main_index_selector_margin_left_right"
                android:layout_alignParentTop="true"
                android:orientation="horizontal"
                >
                <EditText
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dimen_main_index_top_edit_margin_left"
                    android:layout_weight="1"
                    android:hint="@string/select_by_orderno"
                    android:textColorHint="@color/lightgray"
                    android:textSize="12sp"
                    />
                <Button
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@drawable/fragment_index_button_search_black_bg_right_half_round_radius"
                    android:text="@string/search"
                    android:textSize="13sp"
                    />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
    <!--走图同城头部搜素-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_main_index_marqueetext_height"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <com.zoutu.gotolibrary.TextView.MarqueeText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    
    
    
    
    
    
    
    
    
</LinearLayout>