<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_personcenter_login_white_bg"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        >


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:orientation="vertical"
        android:layout_weight="2.7"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@drawable/activity_main_personcenter_login_register_item_half_radius_gray_white_shape"
            android:layout_marginLeft="@dimen/dimen_main_personcenter_login_register_input_item_margin_left_right"
            android:layout_marginRight="@dimen/dimen_main_personcenter_login_register_input_item_margin_left_right"
            android:layout_marginTop="@dimen/dimen_main_personcenter_login_register_input_item_margin_top_bottom_size"
            android:layout_marginBottom="@dimen/dimen_main_personcenter_login_register_input_item_margin_top_bottom_size"
            >
            <Button
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/activity_main_personcenter_login_item_head_black_bg_half_radius_half_angle_shape"
                android:text="@string/username"
                android:textColor="@color/main_personcenter_login_register_input_title_white_bg"
                android:textSize="@dimen/dimen_main_personcenter_login_register_title_word_size"
                android:layout_gravity="center"
                />
            <EditText
                android:id="@+id/et_main_personcenter_login_reg_username"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@null"
                android:layout_gravity="center_vertical"
                android:textColor="@color/main_personcenter_login_input_input_word_black_bg"
                android:textSize="@dimen/dimen_main_personcenter_login_input_input_word_size"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@drawable/activity_main_personcenter_login_register_item_half_radius_gray_white_shape"
            android:layout_marginLeft="@dimen/dimen_main_personcenter_login_register_input_item_margin_left_right"
            android:layout_marginRight="@dimen/dimen_main_personcenter_login_register_input_item_margin_left_right"
            android:layout_marginTop="@dimen/dimen_main_personcenter_login_register_input_item_margin_top_bottom_size"
            android:layout_marginBottom="@dimen/dimen_main_personcenter_login_register_input_item_margin_top_bottom_size"
            >
            <Button
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/activity_main_personcenter_login_item_head_black_bg_half_radius_half_angle_shape"
                android:text="@string/password"
                android:textColor="@color/main_personcenter_login_register_input_title_white_bg"
                android:textSize="@dimen/dimen_main_personcenter_login_register_title_word_size"
                android:layout_gravity="center"
                />
            <EditText
                android:id="@+id/et_main_personcenter_login_reg_pass"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@null"
                android:layout_gravity="center_vertical"
                android:textColor="@color/main_personcenter_login_input_input_word_black_bg"
                android:textSize="@dimen/dimen_main_personcenter_login_input_input_word_size"
                android:inputType="textPassword"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@drawable/activity_main_personcenter_login_register_item_half_radius_gray_white_shape"
            android:layout_marginLeft="@dimen/dimen_main_personcenter_login_register_input_item_margin_left_right"
            android:layout_marginRight="@dimen/dimen_main_personcenter_login_register_input_item_margin_left_right"
            android:layout_marginTop="@dimen/dimen_main_personcenter_login_register_input_item_margin_top_bottom_size"
            android:layout_marginBottom="@dimen/dimen_main_personcenter_login_register_input_item_margin_top_bottom_size"
            >
            <Button
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/activity_main_personcenter_login_item_head_black_bg_half_radius_half_angle_shape"
                android:text="@string/yanzhengma"
                android:textColor="@color/main_personcenter_login_register_input_title_white_bg"
                android:textSize="@dimen/dimen_main_personcenter_login_register_title_word_size"
                android:layout_gravity="center"
                />
            <EditText
                android:id="@+id/et_main_personcenter_login_reg_identify"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1.8"
                android:background="@null"
                android:layout_gravity="center_vertical"
                android:textColor="@color/main_personcenter_login_input_input_word_black_bg"
                android:textSize="@dimen/dimen_main_personcenter_login_input_input_word_size"

                />
            <Button
                android:id="@+id/bt_main_personcenter_login_reg_getidentify"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:background="@null"
                android:hint="@string/getyanzhengma"
                android:textSize="@dimen/dimen_main_personcenter_login_register_getyanzhengma_word_size"
                android:textColorHint="@color/main_personcenter_login_register_get_yanzhengma_gray_bg"
                android:textColor="@color/main_personcenter_login_register_get_yanzhengma_gray_bg"
                android:lines="1"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/bt_main_personcenter_login_reg_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/activity_main_personcenter_login_register_item_half_radius_green_shape"
            android:text="@string/registersubmit"
            android:textColor="@color/main_personcenter_login_register_submit_word_black_bg"
            android:textSize="@dimen/dimen_main_personcenter_login_register_submit_word_size"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen_main_personcenter_login_register_registersubmit_margin_top_bottom_size"
            android:layout_marginTop="@dimen/dimen_main_personcenter_login_register_registersubmit_margin_top_bottom_size"
            android:layout_marginLeft="@dimen/dimen_main_personcenter_login_register_registersubmit_margin_left_right"
            android:layout_marginRight="@dimen/dimen_main_personcenter_login_register_registersubmit_margin_left_right"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="2.5"
        >


    </LinearLayout>

</LinearLayout>