<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_main_index_goto_paotuifei_height"
    android:background="@color/main_index_white_bg"
    android:layout_marginTop="@dimen/dimen_main_index_goto_paotuifei_margintop_size"
    >

    <!--跑腿费收款-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="@dimen/dimen_main_index_goto_paotuifei_ico_width_height"
                android:layout_height="@dimen/dimen_main_index_goto_paotuifei_ico_width_height"
                android:background="@drawable/main_index_paotuifei_shoukuan"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/getmoney_for_paotui"
                    android:textColor="@color/main_index_word_black_bg"
                    android:gravity="bottom"
                    android:textSize="@dimen/dimen_main_index_goto_paotuifei_title_word_size"
                    android:textStyle="bold"
                    android:layout_marginBottom="1dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                >
                <RelativeLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_nearly_get_fee"
                        android:textColor="@color/main_index_word_gray_bg"
                        android:textSize="@dimen/dimen_main_index_goto_paotuifei_content_word_size"

                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    >
                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_nearly_get_fee_demo"
                    android:textColor="@color/main_index_word_gray_bg"
                    android:textSize="@dimen/dimen_main_index_goto_paotuifei_content_word_size"

                    />

                </RelativeLayout>
                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    >


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <!--跑腿费收款-->
    <!--第三方收款-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="@dimen/dimen_main_index_goto_paotuifei_ico_thirdpay_zfb_width"
                android:layout_height="@dimen/dimen_main_index_goto_paotuifei_ico_thirdpay_zfb_height"
                android:background="@drawable/main_index_thirdpay_zfb"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="@dimen/dimen_main_index_goto_paotuifei_ico_thirdpay_wx_width"
                android:layout_height="@dimen/dimen_main_index_goto_paotuifei_ico_thirdpay_wx_height"
                android:background="@drawable/main_index_thirdpay_wx"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="@dimen/dimen_main_index_goto_paotuifei_ico_thirdpay_cash_width"
                android:layout_height="@dimen/dimen_main_index_goto_paotuifei_ico_thirdpay_cash_height"
                android:background="@drawable/main_index_thirdpay_cash"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </LinearLayout>
    <!--第三方收款-->
</LinearLayout>